# Matt-Powell

./: .gitignore  CHANGELOG.md  CONTRIBUTOR_ONBOARDING.md  README.md  ROADMAP.md  pyrightconfig.json  test_decay_values.py  things-to-do.md
projects/3d-vp-lcp/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
projects/3d-vp-lcp/configs/: public_al_with_derived_rasters.json  public_al_with_derived_rasters_veg_only.json  public_ia_with_derived_rasters.json  robust_default_candidate.json  smoke_performance_thresholds.json
projects/3d-vp-lcp/data/: README.md  public_lidar_tile.al_17co_1_ept_node.json  public_lidar_tile.al_17co_2_ept_node.json  public_lidar_tile.al_northal_ept_node.json  public_lidar_tile.ca_alamedaco_1_2021_ept_node.json  public_lidar_tile.ca_northcoastranges_1_b23_ept_node.json  public_lidar_tile.ca_orangeco_ept_node.json  public_lidar_tile.ca_orangeco_ept_node_38.json  public_lidar_tile.ca_sanjoaquin_1_2021_ept_node.json  public_lidar_tile.ca_santaclara_2020_ept_node.json  public_lidar_tile.ca_santacruz_2020_ept_node.json  public_lidar_tile.ca_sierra_nevada_1_2022_ept_node.json  public_lidar_tile.example.json  public_lidar_tile.ia_eastern_1_2019_ept_node.json  public_lidar_tile.ia_fullstate_ept_node.json  public_lidar_tile.ia_fullstate_ept_node_154.json
projects/3d-vp-lcp/docs/: REFERENCES.md  future_work_and_outputs.md  real_data_benchmarking.md  recommended_baseline.md  roadmap.md
projects/3d-vp-lcp/examples/: tutorial.ipynb
projects/3d-vp-lcp/tests/: test_cross_site_summary.py  test_performance_thresholds.py  test_pipeline.py  test_real_data_benchmark.py  test_three_d_summary_golden.py
projects/bobcat-corridor-lab/: .gitignore  README.md  pyproject.toml
projects/bobcat-corridor-lab/configs/: default_scenario.json
projects/bobcat-corridor-lab/outputs/: .gitkeep
projects/bobcat-corridor-lab/tests/: test_raster_ops.py  test_workflow.py
projects/conformal-heterogeneous-gnn/: .gitignore  Dockerfile  Makefile  README.md  REFERENCES.md  pyproject.toml  requirements.txt
projects/conformal-heterogeneous-gnn/outputs/: advanced_comparison.csv  advanced_table.md  alpha_sweep.csv  alpha_table.md  baseline_comparison.csv  baseline_table.md  diagnostics.json  ensemble_comparison.csv  full_comparison.csv  full_comparison_table.md  lambda_sensitivity.csv  lambda_table.md  statistical_tests.json  summary.json
projects/conformal-heterogeneous-gnn/scripts/: run_benchmark.py
projects/conformal-heterogeneous-gnn/tests/: test_real_data.py
projects/environmental-time-series-lab/: EXAMPLE_OUTPUT.md  README.md  pyproject.toml
projects/environmental-time-series-lab/data/: station_histories.json
projects/environmental-time-series-lab/docs/: architecture.md  benchmark-tables.md  data-flow.md  demo-storyboard.md
projects/environmental-time-series-lab/outputs/: run_registry.json  time_series_report.json
projects/environmental-time-series-lab/tests/: test_cli_smoke.py  test_lab.py
projects/raster-monitoring-pipeline/: EXAMPLE_OUTPUT.md  README.md  pyproject.toml
projects/raster-monitoring-pipeline/data/: latest_grid.json
projects/raster-monitoring-pipeline/docs/: architecture.md  benchmark-evidence.md  data-flow.md  demo-storyboard.md
projects/raster-monitoring-pipeline/outputs/: raster_change_report.json
projects/raster-monitoring-pipeline/tests/: test_cli_smoke.py
projects/strata/: .gitignore  EXAMPLE_OUTPUT.md  PUBLISHING.md  README.md  pyproject.toml
projects/strata/docs/: data-flow.md  deployment-guide.md  runbook.md
projects/strata/outputs/: ablation_results.csv  alpha_sweep.csv  baseline_table.md  conditional_coverage_analysis.csv  cqr_quantile_losses_seed0.json  cqr_quantile_losses_seed1.json  cqr_quantile_losses_seed12.json  cqr_quantile_losses_seed14.json  cqr_quantile_losses_seed16.json  cqr_quantile_losses_seed17.json  cqr_quantile_losses_seed18.json  cqr_quantile_losses_seed19.json  cqr_quantile_losses_seed2.json  cqr_quantile_losses_seed3.json  cqr_quantile_losses_seed4.json  cqr_quantile_losses_seed5.json  cqr_quantile_losses_seed6.json  cqr_quantile_losses_seed7.json  cqr_quantile_losses_seed8.json  cqr_quantile_losses_seed9.json  ensemble_comparison.csv  fairness_audit.json  full_comparison.csv  lambda_sensitivity.csv  profile_summary.json  real_method_comparison.csv
projects/strata/paper/: publication-positioning-notes.md  strata-paper.md  strata-project-status-todos.md
projects/strata/scripts/: fairness_audit.py  profile.py
projects/strata/tests/: test_api_smoke.py
sports-sim/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  Procfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  pytest.ini  tuner_profile.prof
sports-sim/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
sports-sim/.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
sports-sim/examples/: quick_demo.py
sports-sim/scripts/: Dockerfile.tune_dashboard  convert_profile.py  debug_load_profile.py  generate_seeds.py  import_rosters.py  mc_tune.py  mc_tune_engine.py  profile_tuner.py  scheduler.py  tune_dashboard.py  tune_report.py
sports-sim/tests/: test_api.py  test_auth_flow.py  test_auth_users.py  test_boxing.py  test_cache.py  test_calibration.py  test_cli.py  test_cricket.py  test_engine.py  test_etl_validation.py  test_golf.py  test_home_advantage.py  test_live_adapters.py  test_mc_engine_parallel.py  test_mc_integration.py  test_mc_parallel.py  test_mc_tuning.py  test_mma.py  test_models.py  test_momentum.py  test_odds.py  test_persistence_resume.py  test_racing.py  test_realism.py  test_realism_smoke.py  test_roster_depth_profiles.py  test_roster_ingest.py  test_roster_validation.py  test_rosters_nhl.py  test_sim_checkpoint_cache.py  test_sport_state.py  test_tennis.py  test_venue_calibration.py  test_weather_effects.py
sports-sim/web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
standalone-checkouts/tsuan/: .gitignore  README.md  REVIEW.md  pyproject.toml
(+765 files in other folders)
