[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bobcat-corridor-lab"
version = "0.1.0"
description = "Bobcat-focused wildlife corridor design toolkit with suitability, resistance, and least-cost analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]
geo = [
    "rasterio>=1.3,<2.0",
]
viz = [
    "matplotlib>=3.8,<4.0",
]

[project.scripts]
bobcat-corridor = "bobcat_corridor_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
