[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-conformal-gnn"
version = "0.1.0"
description = "STRATA: Structured Type-Aware Risk Assessment Through Adaptive Calibration on Heterogeneous Infrastructure Graphs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Matt Powell"},
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "geoprompt>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "pre-commit>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N803",   # argument name should be lowercase (math convention)
    "N806",   # variable in function should be lowercase (math convention)
    "B905",   # zip without strict (py3.10 compat)
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["hetero_conformal"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
